--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "immutable": "^3.8.1",
     "js-cookie": "^2.1.4",
     "lodash": "^4.17.4",
     "normalizr": "2.0.0",
