--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "react-router-dom": "^4.1.1",
     "react-soundcloud-player": "^1.0.1",
     "redux": "^3.7.1",
+    "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "soundcloud": "3.0.1"
   }
 }
