--- a/package.json
+++ b/package.json
@@ -1,22 +1,7 @@
 {
-  "name": "react-starter",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack-dev-server --progress --colors --hot --config ./webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "babel": {
-    "presets": [
-      "es2015",
-      "react",
-      "stage-2"
-    ]
-  },
+  "name": "hi",
+  "version": "0.1.0",
+  "private": true,
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
@@ -37,6 +22,7 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
+    "react-scripts": "^1.0.10",
     "react-soundcloud-player": "^1.0.1",
     "react-sticky": "^6.0.1",
     "react-sticky-el": "^1.0.10",
@@ -47,5 +33,11 @@
     "reselect": "^3.0.1",
     "semantic-ui-react": "^0.71.0",
     "soundcloud": "3.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
