--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "soundcloud": "3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=8080 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
