--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
+    "rxjs": "^5.4.2",
     "semantic-ui-react": "^0.71.0",
     "soundcloud": "3.0.1"
   },
